--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Aakash R</h1>
         <p><em>Student at <strong><a href="https://www.udemy.com/">Udemy</a></strong>.</em></p>
-        <p>I am an iOS and Web Developer. I love coffee.</p>
+        <p>I am an Web Developer. I love coffee.</p>
       </td>
     </tr>
   </table>
