--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </tr>
   </table>
   <hr>
-  <h3>Books and Teaching</h3>
+  <h3>Education</h3>
   <ul>
-    <li>The Complete iOS App Development Bootcamp</li>
-    <li>The Complete Web Development Bootcamp</li>
+    <li>B.E in Electronics and Communication</li>
+    <li>Web Development</li>
   </ul>
   <hr>
-  <h3>Work Experience</h3>
+  <h3>Experience</h3>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -34,12 +34,12 @@
     </thead>
     <tbody>
       <tr>
-        <td>2020-2021</td>
-        <td>Lead Developer at Tempo App</td>
+        <td>2020</td>
+        <td>Experience with embedded systems design using the Arduino programming environment</td>
       </tr>
       <tr>
-        <td>2019</td>
-        <td>Worked as a Researcher at IIT Chennai</td>
+        <td>2021-2022</td>
+        <td>Developer</td>
       </tr>
     </tbody>
   </table>
@@ -47,12 +47,12 @@
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
-    <td>iOS Development</td>
+    <td>Web Development</td>
     <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Web Development</td>
-      <td>⭐⭐⭐⭐⭐</td>
+      <td>Arduino programming</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Photography</td>
