--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </tr>
       <tr>
         <td>2021-2022</td>
-        <td>Developer</td>
+        <td>Web Developer</td>
       </tr>
     </tbody>
   </table>
