--- a/hobbies.html
+++ b/hobbies.html
@@ -9,9 +9,9 @@
 <body>
   <h3>My Hobbies</h3>
   <ol>
-    <li>Going to Gym</li>
     <li>Jogging</li>
-    <li>Motorcycles</li>
+    <li>Theater</li>
+    <li>Reading</li>
   </ol>
 </body>
 
