--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <thead>
       <tr>
         <th>Dates</th>
-        <th>Work</th>
+        <th>Experiences</th>
       </tr>
     </thead>
     <tbody>
